--- a/SimRend1.1/SimRend/SimRend/Views/Solicitud/GeneratePDF.cshtml
+++ b/SimRend1.1/SimRend/SimRend/Views/Solicitud/GeneratePDF.cshtml
@@ -12,31 +12,7 @@
 
     <!-- Code editor -->
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.2.5/ace.js" type="text/javascript" charset="utf-8"></script>
-
-    <!-- Scripts in development mode -->
-    <script src="~/js/jspdf.min.js"></script>
-    <script type="text/javascript">
-        function DescargarPDF() {
-            var doc = new jsPDF();
-            // We'll make our own renderer to skip this editor
-            var specialElementHandlers = {
-                '#editor': function (element, renderer) {
-                    return true;
-
-                }
-            };
-
-            // All units are in the set measurement for the document
-            // This can be changed to "pt" (points), "mm" (Default), "cm", "in"
-            doc.fromHTML($('#Solicitud').get(0), 15, 15, {
-                'width': 170,
-                'elementHandlers': specialElementHandlers
-            });
-            doc.save("sample.pdf");
-        }
-
-    </script>
+    <!--script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.2.5/ace.js" type="text/javascript" charset="utf-8"></script-->
 }
 
 <div id="Solicitud">
